@@ -1,2 +1,4 @@
 # Music-Matchmaker
 This program was a project made for the class "Object-Oriented Programing". The program allows the user to make playlists and search for songs. There is also a music finder that allows you to find songs that are similar to one another that might appeal to your music taste.
+
+*Add more mp3s to the MusicFiles folder if you want more music to be played. Add these vm arguments to run from IDE "--module-path "PATH:/TO/JFXLIB" --add-modules javafx.controls,javafx.media".*
